Tiene el problema de que hace mal la partición de las partes